multistrap (2.1.8) experimental; urgency=low

  * Add all packages to the source dir, including calculated
    dependencies.
  * Improve the omitdebsrc handling for detection of 'true'.
  * Add examples for Grip.
  * Add more synopsis information to manual page. (Closes: #592621)
  * Aim 2.1.8 at experimental as squeeze is frozen and this version
    includes possibly disruptive changes. 
  * Add support for 'flat' apt-ftparchive-style URLs

 -- Neil Williams <codehelp@debian.org>  Wed, 25 Aug 2010 22:59:47 +0100

multistrap (2.1.6) unstable; urgency=low

  * [INTL:fr] French manpage translation update (Closes: #584679)
  * Allow check-deps.sh to proceed when detecting errors.
  * Avoid unitialised Priority value.
  * Call dpkg --print-architecture for determination of host
    architecture. (Closes: #589713)
  * Add aptitude to crosschroot configs as pbuilder now requires it.
  * Allow check-deps.sh to detect | dependencies.

 -- Neil Williams <codehelp@debian.org>  Wed, 28 Jul 2010 19:30:25 +0100

multistrap (2.1.5) unstable; urgency=low

  * [INTL:pt] Updated Portuguese program output translation
    (Closes: #581251)
  * [INTL:da] Danish translation of multistrap program
    (Closes: #581496)
  * [INTL:pt] Updated Portuguese translation for manpage messages
    (Closes: #581673)
  * [INTL:fr] French program output translation (Closes: #582059)
  * Add support for omitdebsrc and change suite behaviour to be non-
    default, usable by selecting explicitsuite to true.
  * When moving downloaded packages to a sourcedir, also download the
    source packages for GPL compliance.
  * Handle fakeroot with native architectures.
  * Extend device table format to support creating symlinks and
    hardlinks.

 -- Neil Williams <codehelp@debian.org>  Mon, 31 May 2010 20:15:56 +0100

multistrap (2.1.4) unstable; urgency=low

  * Add support for configurable single cross-toolchains in
    the chroot - using the dpkg-cross default_arch, if any.