@@ -10,6 +10,7 @@ examples/grip-squeeze.conf ./usr/share/multistrap/
 examples/grip-lenny.conf ./usr/share/multistrap/
 examples/setup.sh ./usr/share/doc/multistrap/examples/
 examples/config.sh ./usr/share/doc/multistrap/examples/
+examples/chroot.sh ./usr/share/multistrap/
 check-deps.sh ./usr/share/multistrap/
 device-table.pl ./usr/share/multistrap/
 update-rc.d ./usr/share/multistrap/
