@@ -24,4 +24,4 @@ aptsources=Ubuntu
 packages=apt
 source=http://archive.ubuntu.com/ubuntu
 keyring=ubuntu-keyring
-suite=maverick
+suite=maverick universe
