@@ -279,6 +279,8 @@ if (defined $k) {
 
 $config_str = '';
 $config_str .= " -o Apt::Architecture=$arch";
+$config_str .= " -o Dir::Etc::TrustedParts=/etc/apt/trusted.gpg.d";
+$config_str .= " -o Dir::Etc::Trusted=/etc/apt/trusted.gpg";
 $config_str .= " -o Apt::Get::AllowUnauthenticated=true"
 	if (defined $noauth);
 $config_str .= " -o Apt::Get::Download-Only=true";
@@ -669,7 +671,7 @@ sub native {
 	}
 	# reinstall set
 	foreach my $reinst (sort @reinstall) {
-		system ("$str $env chroot $dir apt-get --reinstall -y install $reinst");
+		system ("$str $env chroot $dir apt-get --reinstall -y $forceyes install $reinst");
 	}
 }
 
