@@ -6,10 +6,16 @@ multistrap (2.1.8) experimental; urgency=low
   * Add examples for Grip.
   * Add more synopsis information to manual page. (Closes: #592621)
   * Aim 2.1.8 at experimental as squeeze is frozen and this version
-    includes possibly disruptive changes. 
-  * Add support for 'flat' apt-ftparchive-style URLs
+    includes possibly disruptive changes.
 
  -- Neil Williams <codehelp@debian.org>  Wed, 25 Aug 2010 22:59:47 +0100
+
+  * Add support for 'flat' apt-ftparchive-style URLs
+  * Include chroot.sh preventing services being started during chroot creation
+  * Always use the host apt keyring when bootstrapping, since we don't
+    have one yet in the target root.
+
+ -- Wookey <wookey@debian.org>  Fri, 30 Sep 2010 02:21:21 +0100
 
 multistrap (2.1.6) unstable; urgency=low
 
